--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,5 +5,7 @@
 <div class="col-md-4"></div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
+    <br>
+    Don't have an account? <a href="{{ url_for('auth.register') }}">Create one</a>
 </div>
 {% endblock %}
